syntax = "proto3";
import "google/protobuf/empty.proto";

package FileValidationPackage;  // Replace with your actual package name

service FileValidation {
    rpc validateSize (validateSizeRequest) returns (response);
    rpc validateFileMimeType (validateMimeTypeRequest) returns (response);
    rpc helloService (google.protobuf.Empty) returns (greetingResponse);
}

message response {
    bool isValid = 1;
    string message = 2;
}
message greetingResponse {
  string message = 1;
}
message validateSizeRequest {
    fileType file = 1;
    int32 maxSize = 2;
}

message validateMimeTypeRequest {
    fileType file = 1;
    repeated string allowedMimeTypes = 2;
}

message fileType {
    bytes content = 1;
    string name = 2;
    string mimeType = 3;
    int32 size = 4;
}

